# pet-control

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: OLLAMA_SETUP.md
docs/design/: IMPLEMENTATION_PLAN.md
docs/design/behaviors/: behavior_demo_sketch.py  config.py  engine_sketch.py  nestle_sketch.py  posture_sketch.py  recoil_sketch.py  undulate_sketch.py  (+1 more)
docs/development_logs/: HOME_POSITIONING.md  MASTER_DEVELOPMENT_LOG.md
docs/plans/: BEHAVIOR_SYSTEM.md  POWER_MANAGEMENT.md  README.md
docs/servos/: FTServo_documentation alias  ftservo-python-websockets alias
examples/: ml_control_example.py
petcrl/: __init__.py  cli.py  controller.py  protocols.py  types.py
petcrl/assets/: robot_assembly.json
petcrl/backends/: grapple.py  mock.py
petcrl/schemes/: keyboard.py  passthrough.py
petcrl/visualizers/: rerun_viz.py
petctl/: __init__.py  bus_safety.py  cli.py  config.py  controller.py  dev_ui.py  power_manager.py  protocols.py  types.py
petctl/assets/: robot_assembly.json
petctl/backends/: mock.py  robot.py
petctl/llm/: __init__.py  client.py  touch_formatter.py
petctl/perception/: __init__.py  contact.py  stroke.py
petctl/prompts/: behavior_guide.md  robot_context.md
petctl/schemes/: command.py  keyboard.py  ollama_scheme.py  passthrough.py  patterns.py  sine.py
petctl/visualizers/: rerun_viz.py
scripts/: cap_monitor.py  curl_geometry.py  pad_remap.py  rate_test.py  sensor_survey.py  test_ramp_hardware.py
tests/: test_bus_safety.py  test_power_manager.py  test_ramp_filter.py  test_yield_stiff.py
